--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-config.protocol:http
-config.ipaddres:127.0.0.1
-config.port:8443
-config.solrContext:solr
+config.protocol=http
+config.ipaddres=127.0.0.1
+config.port=8443
+config.solrContext=solr
 config.username=guest
-config.knoxContext:gateway
-config.knoxTopology:sandbox
-config.solrSearchCommand:search
- 
+config.password=guest-password
+config.knoxContext=gateway
+config.knoxTopology=sandbox
+config.solrSearchCommand=search
